<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_image_profile"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/fotoprofil"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/rl_image_profile">
        <View
            android:id="@+id/v_line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3"/>
        <TextView
            android:id="@+id/tv_name_profile"
            android:layout_below="@id/v_line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_alignBaseline="@+id/tv_name_profile"
            android:layout_toEndOf="@+id/tv_name_profile"
            android:text="@string/muh_agung_zulhaeran"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_email_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/email"
            android:layout_below="@id/tv_name_profile"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a135d4ky3544_bangkit_academy"
            android:layout_alignBaseline="@+id/tv_email_profile"
            android:layout_toEndOf="@+id/tv_email_profile"
            android:layout_marginStart="20dp"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_phone_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/phone"
            android:layout_below="@id/tv_email_profile"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_089694954534"
            android:textSize="20sp"
            android:layout_alignBaseline="@+id/tv_phone_profile"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/tv_phone_profile"/>
    </RelativeLayout>
    </RelativeLayout>
</ScrollView>